fixes alignment of dash left side nav

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -591,6 +591,7 @@ input {
 
 #dash-nav li > a {
   border-right: 0px;
+  padding-left: 10px;
 }
 
 #sub-btn {
